bug fix: fixed position causing sudden animation shifts

--- a/__scss/core.scss
+++ b/__scss/core.scss
@@ -46,9 +46,10 @@ a {
   height: 100%;
   justify-content: center;
   width: 100%;
+  transition: 0.3s all $ease;
 }
 
-.work-1 .attachment {   background: #c6d5ff; color: #FFF; }
+.work-1 .attachment { background: #c6d5ff; color: #FFF; }
 .work-2 .attachment { background: #f0e8e5; }
 .work-3 .attachment { background: #ff6151; }
 
@@ -91,7 +92,7 @@ h1 {
   top: 0;
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   .work-2 & { z-index: -9; }
   .work-3 & { z-index: -8; }
 }
